# gtmcli

./: Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
Formula/: gtm.rb
npm/: README.md  install.js  package.json
src/: app_config.rs  config.rs  error.rs  main.rs  update_check.rs
src/api/: client.rs  mod.rs  params.rs  workspace.rs
src/auth/: mod.rs  oauth.rs  service_account.rs  token_store.rs
src/commands/: accounts.rs  auth.rs  builtin_variables.rs  changelog.rs  clients.rs  config.rs  containers.rs  environments.rs  explain.rs  folders.rs  gtag_configs.rs  mod.rs  permissions.rs  setup.rs  tags.rs  templates.rs  transformations.rs  triggers.rs  upgrade.rs  validate.rs  variables.rs  version_headers.rs  versions.rs  workspaces.rs  zones.rs
src/output/: formatter.rs  table.rs
tests/: cli_basic.rs  mock_api.rs
