[package]
name = "gtm"
version = "0.1.0"
edition = "2021"
description = "Google Tag Manager CLI — One CLI for all of GTM"
license = "MIT"
repository = "https://github.com/clichedmoog/gtm-cli"

[[bin]]
name = "gtm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
url = "2"

[dev-dependencies]
tempfile = "3"
