[package]
name = "gtm"
version = "0.9.1"
edition = "2021"
description = "Google Tag Manager CLI — One CLI for all of GTM"
license = "MIT"
repository = "https://github.com/clichedmoog/gtm-cli"

[[bin]]
name = "gtm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
url = "2"
comfy-table = "7"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
semver = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
